# starter-actix-web

./: .gitignore  Cargo.toml  README.md  config.toml
src/lib/: lib.rs  startup.rs
src/lib/configuration/: config.rs  mod.rs
src/lib/routes/: health_check.rs  mod.rs
tests/api/: health_check.rs  main.rs
