[package]
name = "starter-actix-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "actix-web-template"
path = "src/bin/main.rs"

[lib]
name = "actix_web_template_lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
confik = "0.11.5"
