[package]
name = "starter-actix-web"
version = "1.0.0"
edition = "2021"
description = "Template for Actix Web API"
readme = "README.md"
authors = ["Jeffery D. Mitchell", "<sentinel1909@jeff-mitchell.dev>"]
repository = "https://github.com/sentinel1909/starter-actix-web"
license = 'MIT'
keywords = ["Actix Web, API"]
categories = ["template"]

[[bin]]
name = "starter-actix-web"
path = "src/bin/main.rs"

[lib]
name = "starter_actix_web_lib"
path = "src/lib/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
confik = "0.11.5"
